apollo-federation/tests/composition/snapshots/main__composition__compose_basic__doesnt_leave_federation_directives_in_the_final_schema.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: api_schema.schema()
---
type Query {
  products: [Product!]
}

type Product {
  sku: String!
  name: String!
}
