apollo-federation/tests/composition/snapshots/main__composition__compose_basic__include_types_from_different_subgraphs.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: api_schema.schema()
---
type Query {
  products: [Product!]
}

type Product {
  sku: String!
  name: String!
}

type User {
  name: String
  email: String!
}
