apollo-federation/tests/composition/snapshots/main__composition__compose_basic__preserves_descriptions.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: api_schema.schema()
---
"""A cool schema"""
schema {
  query: Query
}

"""The foo directive description"""
directive @foo(url: String) on FIELD

"""
Available queries
Not much yet
"""
type Query {
  """Returns tea"""
  t(
    """An argument that is very important"""
    x: String!,
  ): String
}

"""An enum"""
enum E {
  """The A value"""
  A
  """The B value"""
  B
}
